<resources>
    <string name="app_name">Schade Melding AP</string>
    <string name="home">Home</string>
    <string name="registreer">Registreer</string>
    <string name="email">Email</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="naam">Naam</string>
    <string name="check_reparateur">Reparateur/facilitaire dienst</string>
    <string name="schade_melden">Schade melden</string>
    <string name="lokaal_plaats">Lokaal/Plaats:</string>
    <string name="categorie">Categorie</string>
    <string name="beschrijving">Beschrijving schade:</string>
    <string name="beschrijf_hier_de_schade">Beschrijf hier de schade</string>
    <string-array name="repair_ap_provincie">
        <item>Selecteer uitvoerder</item>
        <item>AP</item>
        <item>Provincie</item>
    </string-array>
    <string-array name="categorien">
        <item>Deur</item>
        <item>Verlichting</item>
        <item>Raam</item>
        <item>Stopcontact</item>
        <item>Verwarming</item>
        <item>Verluchting</item>
        <item>Meubilair</item>
        <item>Sanitair</item>
        <item>Andere</item>
    </string-array>
    <string-array name="categories">
        <item>Alles</item>
        <item>Deur</item>
        <item>Verlichting</item>
        <item>Raam</item>
        <item>Stopcontact</item>
        <item>Verwarming</item>
        <item>Verluchting</item>
        <item>Meubilair</item>
        <item>Sanitair</item>
        <item>Andere</item>
    </string-array>
    <string name="verdieping">Verdieping</string>
    <string-array name="lokaalVerdiepMin1">
        <item>67 Technische ruimte</item>
        <item>68 Fotostudio</item>
        <item>68A Berging</item>
        <item>69 Berging - Archief</item>
        <item>71 Practicum - leslokaal</item>
        <item>72A Practicum EM werkbanken</item>
        <item>72B Practicum EM draaien &amp; lassen</item>
        <item>72C Practicum OT</item>
        <item>G01 Gang kelder</item>
        <item>L02 Sas lift</item>
        <item>T05 Trap kelder - GLV</item>
    </string-array>
    <string-array name="lokaalVerdiepGelijkVloer">
        <item>01 Onthaal - studentenAdministratie</item>
        <item>02 Projectruimte</item>
        <item>03 Projectruimte</item>
        <item>04 Labo Topo</item>
        <item>05 Berging labo Topo</item>
        <item>06 VIP Vergaderruimte</item>
        <item>07 Refter studenten</item>
        <item>08 Ontspanningsruimte</item>
        <item>09 Projectlokaal</item>
        <item>10 Projectlokaal</item>
        <item>11 Projectlokaal</item>
        <item>12 Projectlokaal</item>
        <item>13 Projectlokaal</item>
        <item>14 Projectlokaal</item>
        <item>15 Projectlokaal</item>
        <item>16 EHBO lokaal</item>
        <item>17 Spreekcel</item>
        <item>18 Spreekcel</item>
        <item>40 Keuken</item>
        <item>42 Afwas keuken</item>
        <item>43 Koel &amp; Vriesruimte</item>
        <item>44 Berging keuken</item>
        <item>45 Gang keuken</item>
        <item>46 Berging studentenclub</item>
        <item>47 Afval containers</item>
        <item>48 Kleedkamers keuken</item>
        <item>50 Sas toilet personeel</item>
        <item>51 Toilet personeel dames</item>
        <item>52A Toilet personeel heren urinoirs</item>
        <item>52B Toilet Personeel heren</item>
        <item>53 Sas WC - Fietsenstalling</item>
        <item>54 WC - Dames</item>
        <item>55 WC - Heren</item>
        <item>56 Douches Heren</item>
        <item>57 Douches Dames</item>
        <item>60 Fietsenstalling - studenten</item>
        <item>60A Fietsenstalling - personeel</item>
        <item>61 Berging</item>
        <item>62 Gas opslag</item>
        <item>63 Data (patchlokaal)</item>
        <item>64 Berging Schoonmaak</item>
        <item>G01 Inkomhal-zuid</item>
        <item>G02 Lounge</item>
        <item>G03 Inkomhal-Noord</item>
        <item>T01 Traphal 01 GLV - Oost</item>
        <item>T02 Traphal 02 GLV - Zuid</item>
        <item>T03 Traphal 03 GLV - Aula 01.08</item>
        <item>T04 Traphal 04 GLV Vluchttrap West</item>
        <item>T05 Traphal 05 GLV-Kelder</item>
        <item>T06 Traphal 06 GLV-Noord</item>
        <item>T07 Traphal 07 GLV Vluchttrap Oost</item>
    </string-array>
    <string-array name="lokaalVerdiep1">
        <item>01 Labo Electriciteit</item>
        <item>02 Labo GDM 2</item>
        <item>03 Labo Netwerken</item>
        <item>04 Labo Mechatronica</item>
        <item>05 Labo elektrische Machines</item>
        <item>06 Labo Aandrijftechnieken</item>
        <item>07 Labo Elektronica</item>
        <item>08/1 Auditorium 01.08 noord</item>
        <item>08/2 Auditorium 01.08 centraal</item>
        <item>08/3 Auditorium 01.08 zuid</item>
        <item>09 Labo Klimatisatie</item>
        <item>10 Practicum onderhoud</item>
        <item>11 Labo Onderhoudsmetingen EM</item>
        <item>12 Pompinstallatie EM</item>
        <item>13 Labo Automatisatie 2</item>
        <item>14 Labo Automatisatie 2</item>
        <item>15 Labo Proces 1</item>
        <item>16 Labo Energie 1</item>
        <item>17 Labo KNX</item>
        <item>18 Leslokaal - Atelier GDM 1</item>
        <item>19 Lockerruimte</item>
        <item>20 Leslokaal - Atelier GDM 2</item>
        <item>21 Leslokaal - Labo GDM 1</item>
        <item>22 Leslokaal - Atelier GDM 3</item>
        <item>23 Berging GDM</item>
        <item>50 Sas Toilet</item>
        <item>51 Toilet Dames</item>
        <item>52 Toilet Heren</item>
        <item>60 Technische ruimte Zuid</item>
        <item>61 Technische ruimte West</item>
        <item>62 Technische ruimte west</item>
        <item>63 Sas Klima lokaal</item>
        <item>64 Sas Stooklokaal</item>
        <item>65 Sas Stooklokaal</item>
        <item>66 Stooklokaal</item>
        <item>G01 Gang Oost</item>
        <item>G02 Gang Zuid</item>
        <item>G03 Gang West - voorkant aula</item>
        <item>G04 Gang West - klimalokaal</item>
        <item>G05 Gang Noord</item>
        <item>L01 Sas lift</item>
        <item>T01 Traphal 01 Oost</item>
        <item>T02 Traphal 02 Zuid</item>
        <item>T03 Traphal 03 Aula 01.08</item>
        <item>T04 Traphal 04 Vluchttrap West</item>
        <item>TO6 Traphal 06 Noord</item>
        <item>T07 Traphal 07 Vluchttrap Oost</item>
    </string-array>
    <string-array name="lokaalVerdiep2">
        <item>01 Auditorium</item>
        <item>02 Sas Aula 02.03</item>
        <item>03 Auditorium</item>
        <item>04 Sas Aula 02.05</item>
        <item>05 Auditorium</item>
        <item>06 Berging ICT</item>
        <item>07 Serverroom</item>
        <item>08 Kantoor ICT Helpdesk</item>
        <item>09 Kantoor studiebegeleiding</item>
        <item>10 Open Leercentrum</item>
        <item>11 Berging poets</item>
        <item>50 Sas Toilet</item>
        <item>51 Toilet Heren</item>
        <item>52 Toilet Dames</item>
        <item>60 Technische ruimte</item>
        <item>G01 Gang</item>
        <item>L01 Sas lift</item>
        <item>T01 Traphal 01 Oost</item>
        <item>T02 Traphal 02 Zui</item>
        <item>T03 Traphal 03</item>
        <item>T06 Traphal 06 daktuin</item>
    </string-array>
    <string-array name="lokaalVerdiep3">
        <item>01 Labo Integrale veiligheid</item>
        <item>02 Leslokaal</item>
        <item>03 Leslokaal</item>
        <item>04 Leslokaal</item>
        <item>05 Leslokaal</item>
        <item>06 Leslokaal</item>
        <item>07 Leslokaal</item>
        <item>08 Leslokaal</item>
        <item>09 Leslokaal</item>
        <item>10 Leslokaal</item>
        <item>11 Leslokaal</item>
        <item>12 Leslokaal</item>
        <item>13 Leslokaal</item>
        <item>14 Berging poets</item>
        <item>50 Sas Toilet dames</item>
        <item>51 Toilet Dames</item>
        <item>52A Sas Toilet Heren</item>
        <item>52B Toilet Heren</item>
        <item>T01 Traphal 01 Oost</item>
        <item>T02 Traphal 02 Zuid</item>
        <item>T03 Traphal 03</item>
    </string-array>
    <string-array name="lokaalVerdiep4">
        <item>01 Kantoor Departementshoofd</item>
        <item>02 Kantoor EM</item>
        <item>03 Kantoor Diensthoofd A &amp; O</item>
        <item>04 Vergaderzaal</item>
        <item>05 Kantoor Beleidsmedewerkers</item>
        <item>06 Kantoor ENE</item>
        <item>07 Kantoor EA</item>
        <item>08 Kantoor GDM</item>
        <item>09 Kantoor TI</item>
        <item>10 Kantoor IV</item>
        <item>11 Kantoor VG</item>
        <item>12 Kantoor Planners</item>
        <item>13 Lectorenruimte</item>
        <item>14 Vergaderzaal</item>
        <item>17 Vestiaire</item>
        <item>18 Vergaderzaal</item>
        <item>19 Vergaderzaal</item>
        <item>20 Lectorenruimte</item>
        <item>21 Overlegruimte</item>
        <item>22 Overlegruimte</item>
        <item>23 Overlegruimte</item>
        <item>24 Kopieerruimte</item>
        <item>25 Overlegruimte</item>
        <item>26 Berging refter</item>
        <item>27 Refter personeel</item>
        <item>28 Berging Poets</item>
        <item>50A Sas Toilet Dames</item>
        <item>50B Toilet Dames</item>
        <item>50C Toilet Dames rolstoel</item>
        <item>51A Toilet Heren urinoirs</item>
        <item>51B Toilet Heren rolstoel</item>
        <item>51C Toilet Heren</item>
        <item>52 Sas Toilet Heren</item>
        <item>60 Technische ruimte</item>
        <item>61 Technische ruimte 04.19</item>
        <item>G01 Gang</item>
        <item>T01 Traphal 01 Oost</item>
        <item>T02 Traphal 02 Zuid</item>
    </string-array>
    <string name="error_zwak_wachtwoord">Moet minimaal 6 tekens bevatten.</string>
    <string name="error_ongeldig_email">Email is ongeldig.</string>
    <string name="error_email_bestaat">Email is al in gebruik.</string>
    <string name="wachtwoord_ongeldig">Wachtwoord ongeldig.</string>
    <string name="geslaagd">Geslaagd!</string>
    <string name="registreer_succes">Uw account werd succesvol gecreëerd.</string>
    <string name="login_error">Authenticatie mislukt.</string>
    <string name="melding_succes">Uw melding werd succesvol verzonden.</string>
    <string name="verplicht">Verplicht.</string>
    <string name="schade_zoeken">Melding zoeken</string>
    <string name="inloggen">Inloggen</string>
    <string name="niet_geregistreerd">Niet geregistreerd?</string>
    <string name="wachtwoord_vergeten">Wachtwoord vergeten</string>
    <string name="foto">foto</string>
    <string name="aanmelden">Aanmelden</string>
    <string name="beschrijf_schade">Beschrijf hier de schade</string>
    <string name="foto_uploaden">Foto uploaden</string>
    <string name="lokaal">Lokaal</string>
    <string name="vrije_invoer">Vrije invoer</string>
    <string name="beschrijf_hier_de_locatie">Beschrijf hier de locatie</string>
    <string name="wachtwoord_herstellen">Wachtwoord Herstellen</string>
    <string name="sturen">Sturen</string>
    <string name="welkom">Welkom</string>
    <string name="huidige_schades">Huidige Schades</string>
    <string name="search">search</string>
    <string name="datum">Datum</string>
    <string name="gerepareerd">Gerepareerd:</string>
    <string name="foto_downloaden_mislukt">Foto downloaden mislukt.</string>
    <string name="foto_laden">Foto laden…</string>
    <string name="lokaal_dubbelpunt">Lokaal:</string>
    <string name="categorie_dubbelpunt">Categorie:</string>
    <string name="foto_dubbelpunt">Foto:</string>
    <string name="melder">Melder:</string>
    <string name="reparatie_datum">Reparatiedatum:</string>
    <string name="reparatie_uitvoerder">Reparatie uitvoerder:</string>
    <string name="naam_van_reparateur">Naam van reparateur:</string>
    <string name="extra_notities">Extra notities:</string>
    <string name="notities">Notities</string>
    <string name="opslaan">Opslaan</string>
    <string name="selecteer_datum">Selecteer datum</string>
</resources>