<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <TextView
        android:id="@+id/textLokaal"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lokaal_dubbelpunt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUser" />

    <TextView
        android:id="@+id/textCategorie"
        style="@style/textViewStyle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/categorie_dubbelpunt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDatum" />

    <TextView
        android:id="@+id/textDatum"
        style="@style/textViewStyle"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/datum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGerepareerd"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gerepareerd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBeschrijving2" />

    <TextView
        android:id="@+id/textBeschrijving"
        style="@style/textViewStyle"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/beschrijving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLokaalExtra" />

    <TextView
        android:id="@+id/textBeschrijving2"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBeschrijving" />

    <TextView
        android:id="@+id/textLokaalExtra"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLokaalOmschrijving" />

    <TextView
        android:id="@+id/textLokaalOmschrijving"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLokaal" />

    <TextView
        android:id="@+id/textFoto"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/foto_dubbelpunt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGerepareerd" />

    <ImageView
        android:id="@+id/imageSchade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFoto" />

    <ProgressBar
        android:id="@+id/progressFoto"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFoto" />

    <TextView
        android:id="@+id/textFotoLaden"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/foto_laden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressFoto" />

    <Switch
        android:id="@+id/switchArchive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/textGerepareerd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toEndOf="@+id/textGerepareerd" />

    <TextView
        android:id="@+id/textUser"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/melder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>