<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NieuweMeldingActivity">

    <Spinner
        android:id="@+id/spinnerVerdieping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/verdieping"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/textVerdieping"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVerdieping"
        style="@style/textViewStyle"
        android:layout_marginTop="8dp"
        android:text="@string/verdieping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerLokaal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textLokaal"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVerdieping" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/categorie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVrijeInvoer" />

    <TextView
        android:id="@+id/textBeschrijving2"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/beschrijving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorie" />

    <EditText
        android:id="@+id/editBeschrijving"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/beschrijf_schade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBeschrijving2" />

    <Button
        android:id="@+id/buttonFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/apDarkRed"
        android:text="@string/foto_uploaden"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBeschrijving" />

    <ImageView
        android:id="@+id/imageThumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/foto"
        app:layout_constraintBottom_toTopOf="@+id/buttonMeldenSchade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/buttonFoto"
        app:layout_constraintTop_toBottomOf="@+id/editBeschrijving" />

    <Button
        android:id="@+id/buttonMeldenSchade"
        style="@style/buttonStyle"
        android:text="@string/schade_melden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLokaal"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lokaal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVerdieping" />

    <TextView
        android:id="@+id/textVrijeInvoer"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/vrije_invoer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLokaal" />

    <EditText
        android:id="@+id/editVrijeInvoer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/beschrijf_hier_de_locatie"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="0dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textVrijeInvoer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/textVrijeInvoer" />

    <Spinner
        android:id="@+id/spinnerCategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:entries="@array/categorien"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editVrijeInvoer" />

</android.support.constraint.ConstraintLayout>