<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditActivity">

    <TextView
        android:id="@+id/textRepairDate"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/reparatie_datum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWhoRepairs"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/reparatie_uitvoerder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRepairDate" />

    <TextView
        android:id="@+id/textNameRepair"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/naam_van_reparateur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWhoRepairs" />

    <TextView
        android:id="@+id/textExtraNotes"
        style="@style/textViewStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/extra_notities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameRepair" />

    <EditText
        android:id="@+id/editNameRepair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textNameRepair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textNameRepair"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinnerWhoRepairs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/repair_ap_provincie"
        app:layout_constraintBottom_toTopOf="@+id/editNameRepair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textWhoRepairs"
        app:layout_constraintTop_toBottomOf="@+id/textDatePicker"
        app:layout_constraintVertical_bias="0.631" />

    <EditText
        android:id="@+id/editExtraNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/notities"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExtraNotes" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/opslaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editExtraNotes" />

    <TextView
        android:id="@+id/textDatePicker"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:text="@string/selecteer_datum"
        app:layout_constraintBaseline_toBaselineOf="@+id/textRepairDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRepairDate" />

</android.support.constraint.ConstraintLayout>